--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl:          /
 
 author:
   name:           'Popp1nFresh'
-  url:            https://twitter.com/
+  url:            https://twitter.com/popp1nfresh
 
 paginate:         5
 
